# fmcg_intelligent_tools

./: README.md  pyproject.toml  requirements.txt
src/fmcg_intelligent_tools/: Main.ipynb  Untitled.ipynb  constants.py  main.py  utils.py
