[project]
name = "fmcg-intelligent-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Fazalika Hismawan",email = "hismawan.fazalika@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "fmcg_intelligent_tools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
