[project]
name = "fmcg-intelligent-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Fazalika Hismawan",email = "hismawan.fazalika@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.5,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fmcg_intelligent_tools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
